benchmark/problems/phase-rs_phase_2167/context/crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__changeling_outcast_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Spell",
        "effect": {
          "type": "Unimplemented",
          "name": "unknown",
          "description": "Changeling"
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": "Changeling",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    },
    {
      "PreLoweredStatic": {
        "mode": "CantBeBlocked",
        "affected": {
          "type": "SelfRef"
        },
        "modifications": [],
        "condition": null,
        "affected_zone": null,
        "effect_zone": null,
        "active_zones": [],
        "characteristic_defining": false,
        "description": "~ can't block and can't be blocked."
      }
    }
  ],
  "source_text": "Changeling (This card is every creature type.)\nThis creature can't block and can't be blocked.",
  "card_name": "Changeling Outcast"
}
